Properly set diluted margin in Assertion constructor.