@@ -10,18 +10,16 @@
 
 package us.freeandfair.corla.query;
 
-import java.util.List;
-import java.util.Collections;
-import java.util.Comparator;
-
-import org.hibernate.query.Query;
-import org.hibernate.Session;
+import java.util.*;
 
 import org.apache.log4j.LogManager;
 import org.apache.log4j.Logger;
 
 
 import us.freeandfair.corla.model.Assertion;
+import us.freeandfair.corla.model.CastVoteRecord;
+import us.freeandfair.corla.model.NEBAssertion;
+import us.freeandfair.corla.model.NENAssertion;
 
 
 /**
@@ -44,10 +42,15 @@ public final class AssertionQueries {
   /**
    * Obtain the Assertions for the specified contest name.
    *
-   * @param contestName The contest name
+   * @param contestName      The contest name
+   * @param my_universe_size The total number of ballots in the universe for this audit.
+   *                         Note that this is _not_ always the same as the ballot count
+   *                         for this contest - for example, if multiple audits of different
+   *                         contests are being conducted in the same county. ContestResult.getBallotCount()
+   *                         has the correct value.
    * @return the list of assertions defined for the contest
    */
-  public static List<Assertion> matching(final String contestName) {
+  public static List<Assertion> matching(final String contestName, long my_universe_size) {
     // Following is an example for grabbing a single ComparisonAudit from the database
     /*final Session s = Persistence.currentSession();
     final Query q =
@@ -63,7 +66,13 @@ public final class AssertionQueries {
     } catch (javax.persistence.NoResultException e ) {
       return null;
     }*/
-    return Collections.emptyList();
+    List<String> assumedContinuing =  Arrays.asList("TestCandidate1", "TestCandidate2", "TestWinner", "TestLoser");
+    Assertion myTestNENAssertion = new NENAssertion("TestContestName", "TestWinner", "TestLoser", 100,
+            10000, 42, assumedContinuing);
+    Assertion myTestNEBAssertion = new NEBAssertion("TestContestName", "TestWinner", "TestLoser", 100,
+    10000, 42);
+
+    return List.of(myTestNEBAssertion, myTestNENAssertion);
   }
 
 
